// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a directory with children and loaded background 1`] = `
<div>
  <header
    className="DirectoryHeader DirectoryHeader--WithBanner"
  >
    <div>
      <div
        className="Loader DirectoryHeader__Image"
      >
        <div
          className="Loader__BallScaleRippleMultiple"
        >
          <div
            style={
              Object {
                "borderColor": "#1eb694",
              }
            }
          />
          <div
            style={
              Object {
                "borderColor": "#1eb694",
              }
            }
          />
          <div
            style={
              Object {
                "borderColor": "#1eb694",
              }
            }
          />
        </div>
      </div>
      <div
        className="DirectoryHeader__Image DirectoryHeader__Image--Opaque"
        style={
          Object {
            "backgroundImage": "linear-gradient(rgba(0, 0, 0, 0) 50%,
                  rgba(0, 0, 0, 0.8)),
                  url(http://demo.opium.sitioweb.fr/2909-vallon-moy-res-jpg/thumbs/1170-400)",
          }
        }
      />
    </div>
    <div
      className="DirectoryHeader__ActionLinks"
    />
    <h1
      className="DirectoryHeader__Title"
    >
      foo
    </h1>
  </header>
  <div>
    <div
      className="Directory__Row"
    />
    <div
      className="Directory__Row"
    />
  </div>
  <footer
    className="DirectoryFooter"
  >
    Total number of items: 
    2
  </footer>
</div>
`;

exports[`renders a directory with header 1`] = `
<div>
  <header
    className="DirectoryHeader DirectoryHeader--WithBanner"
  >
    <div>
      <div
        className="Loader DirectoryHeader__Image"
      >
        <div
          className="Loader__BallScaleRippleMultiple"
        >
          <div
            style={
              Object {
                "borderColor": "#1eb694",
              }
            }
          />
          <div
            style={
              Object {
                "borderColor": "#1eb694",
              }
            }
          />
          <div
            style={
              Object {
                "borderColor": "#1eb694",
              }
            }
          />
        </div>
      </div>
      <div
        className="DirectoryHeader__Image DirectoryHeader__Image--Opaque"
        style={
          Object {
            "backgroundImage": "linear-gradient(rgba(0, 0, 0, 0) 50%,
                  rgba(0, 0, 0, 0.8)),
                  url(http://demo.opium.sitioweb.fr/2909-vallon-moy-res-jpg/thumbs/1170-400)",
          }
        }
      />
    </div>
    <div
      className="DirectoryHeader__ActionLinks"
    />
    <h1
      className="DirectoryHeader__Title"
    >
      foo
    </h1>
  </header>
  <div>
    <div
      className="Directory__Row"
    />
    <div
      className="Directory__Row"
    />
  </div>
  <footer
    className="DirectoryFooter"
  >
    Total number of items: 
    2
  </footer>
</div>
`;

exports[`renders a non empty directory 1`] = `
<div>
  <header
    className="DirectoryHeader"
  >
    <div
      className="DirectoryHeader__ActionLinks"
    />
  </header>
  <div>
    <div
      className="Directory__Row"
    />
    <div
      className="Directory__Row"
    />
  </div>
  <footer
    className="DirectoryFooter"
  >
    Total number of items: 
    2
  </footer>
</div>
`;

exports[`renders a non empty directory with parent 1`] = `
<div>
  <header
    className="DirectoryHeader"
  >
    <div
      className="DirectoryHeader__ActionLinks"
    />
  </header>
  <div>
    <div
      className="Directory__Row"
    />
    <div
      className="Directory__Row"
    />
  </div>
  <footer
    className="DirectoryFooter"
  >
    Total number of items: 
    2
  </footer>
</div>
`;

exports[`renders an empty directory 1`] = `
<div>
  <header
    className="DirectoryHeader"
  >
    <div
      className="DirectoryHeader__ActionLinks"
    />
  </header>
  <div />
  <footer
    className="DirectoryFooter"
  >
    Total number of items: 
    0
  </footer>
</div>
`;

exports[`renders an empty directory without admin link 1`] = `
<div>
  <header
    className="DirectoryHeader"
  >
    <div
      className="DirectoryHeader__ActionLinks"
    />
  </header>
  <div />
  <footer
    className="DirectoryFooter"
  >
    Total number of items: 
    0
  </footer>
</div>
`;

exports[`renders directory without crashing 1`] = `<div />`;

exports[`renders root directory with file as children 1`] = `
<div>
  <header
    className="DirectoryHeader DirectoryHeader--WithBanner"
  >
    <div>
      <div
        className="Loader DirectoryHeader__Image"
      >
        <div
          className="Loader__BallScaleRippleMultiple"
        >
          <div
            style={
              Object {
                "borderColor": "#1eb694",
              }
            }
          />
          <div
            style={
              Object {
                "borderColor": "#1eb694",
              }
            }
          />
          <div
            style={
              Object {
                "borderColor": "#1eb694",
              }
            }
          />
        </div>
      </div>
      <div
        className="DirectoryHeader__Image DirectoryHeader__Image--Opaque"
        style={
          Object {
            "backgroundImage": "linear-gradient(rgba(0, 0, 0, 0) 50%,
                  rgba(0, 0, 0, 0.8)),
                  url(http://demo.opium.sitioweb.fr/2909-vallon-moy-res-jpg/thumbs/1170-400)",
          }
        }
      />
    </div>
    <div
      className="DirectoryHeader__ActionLinks"
    />
    <h1
      className="DirectoryHeader__Title"
    >
      foo
    </h1>
  </header>
  <div>
    <div
      className="Directory__Row"
    />
    <div
      className="Directory__Row"
    />
    <div
      className="Directory__Row"
    />
  </div>
  <footer
    className="DirectoryFooter"
  >
    Total number of items: 
    3
  </footer>
</div>
`;
